Update Blenche Darius .html

--- a/Pagina HTML/Blenche Darius .html
+++ b/Pagina HTML/Blenche Darius .html
@@ -1,6 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
 
+  <head>
+<style>
+
+body {
+  background-color: #C9F382;
+}
+
+p {
+  color: black;
+} 
+
+li {
+  color: #013596;
+} 
+
+ h3 {
+  color: #065AF9;
+} 
+
+ th {
+  color: #B56104;
+} 
+
+ td {
+  color: #B56104;
+} 
+
+</style>
+</head>
+  
 <meta charset="utf-8">
 <title>Blenche Darius</title>
 
