--- a/catalog html/portal pagini colegi.html
+++ b/catalog html/portal pagini colegi.html
@@ -1,5 +1,24 @@
 <!DOCTYPE html>
 <html>
+
+<style>
+
+
+body {
+ 
+ background-color: #22ccf5;
+
+}
+
+ h1 {
+ 
+ color: #590677;
+
+}
+ 
+</style>
+
+  
 <head>
 <title>Portal</title>
 </head>
